--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 
 <head>
-    <title>React 17, Webpack 5.68 Boilerplate</title>
+    <title>El señor</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Miguel Rodríguez Bonhome, mrbonhome.com">
-    <meta name="description" content="React 18, Webpack 5 and Babel 7.">
+    <meta name="author" content="Tomás Guijarro Ferrandiz">
+    <meta name="description" content="El señor">
 </head>
 
 <body>
